[project]
name = "pyweb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.4"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.35.0",
]

[project.scripts]
pyweb = "src.main:main"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.8",
]
